--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Lingzhi-sh.GitHub.io</h1>
-        <p>凤姐的装修公司网站</p>
+        <p>羚志装修公司官网</p>
         <p class="view"><a href="https://github.com/lingzhi-sh">View the Project on GitHub <small>lingzhi-sh</small></a></p>
         <ul>
           <li class="single"><a href="https://github.com/lingzhi-sh/lingzhi-sh.github.io">View On <strong>GitHub</strong></a></li>
